숨김파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Open API KEY and INFO 
 src/openApi.py
 
+# Visualization Function
+src/function.py 
+
 # Map Visualization result picture
 Map Visualization/result/*.html
 
